Added signup API
