# server/public/apiDocsV1/swagger.json
@@ -32,6 +32,88 @@
   ],
   "produces": ["application/json"],
   "paths": {
+    "/user/signup": {
+      "post": {
+        "deprecated": false,
+        "tags": ["User"],
+        "description": "Signup",
+        "consumes": ["application/x-www-form-urlencoded"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "formData",
+            "description": "Please enter your email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "password",
+            "in": "formData",
+            "description": "Please enter your password",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "description": "Please enter your name",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "dob",
+            "in": "formData",
+            "description": "Enter dob in ddmmyyyy format",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "gender",
+            "in": "formData",
+            "description": "Please select 1=Male, 2=Female and 3=Others",
+            "required": false,
+            "enum": [1, 2, 3],
+            "type": "number"
+          },
+          {
+            "name": "deviceID",
+            "in": "formData",
+            "description": "deviceID",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "deviceToken",
+            "in": "formData",
+            "description": "deviceToken",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "deviceTypeID",
+            "in": "formData",
+            "description": "Please select 1= IOS, 2=Android , 3=web",
+            "required": false,
+            "enum": [1, 2, 3],
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "basicAuth": ["Username: ", "Password: "]
+          }
+        ]
+      }
+    },
     "/user/login": {
       "post": {
         "deprecated": false,
